# Reaaliaikagraffa-openGL

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  camera.h  fragmentShader.frag  gameobject.cpp  gameobject.h  main_model_loading.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  teapot.cpp  vertexShader.vert
src/: camera.h  main_lightning.cpp  main_projection.cpp  main_simple_teapot.cpp  mesh.cpp  shader.cpp  shader.h  teapot.h  texture.cpp
